2002-02-11  Kjartan Maraas  <kmaraas@gnome.org>

	* tasklist.c: #include <config.h>
	
2002-02-09  Mark McLoughlin  <mark@skynet.ie>

	* tasklist.c: (fill_tasklist_applet): update for
	panel_applet_set_expand_flags change.

2002-02-09  Mark McLoughlin  <mark@skynet.ie>

	* GNOME_GenUtilApplet_Factory.server.in.in: move to Vertigo namespace.

	* main.c: update for factory macro change.

Wed Feb 06 10:01:46 2002  George Lebl <jirka@5z.com>

	* clock.c, mailcheck.c, pager.c, tasklist.c: Get initial values
	  for size and orient rather then just using defaults.  Background
	  still needs sorting out.

2002-02-02  Seth Nickell  <snickell@stanford.edu>

	* GNOME_GenUtilApplet_Factory.server.in.in:

	More funky renaming.

2002-01-31  Mark McLoughlin  <mark@skynet.ie>

	* clock_applet.desktop:
	* mailcheck_applet.desktop:
	* printer.desktop: remove, not needed anymore.

2002-01-30  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: update for AM_GCONF_SOURCE_2.

2002-01-28  Glynn Foster  <glynn.foster@sun.com>

	* clock.c, remote-helper.c, tasklist.c: Remove some 
	unused variables

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* GNOME_GenUtilApplet_Factory.server.in.in:

	Panel apparently doesn't like things to not
	have a Category and refuses to add them (though
	it shows them in the tree heirarchy OK...go figure).
	Put in utilities until we sort everything.

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* GNOME_GenUtilApplet_Factory.server.in.in:

	Rename some applets. Notably "Tasklist" and "Pager"
	to "Window List" and "Workspace List", respectively.
	Nils suggests we might try "Window Bar".

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* GNOME_GenUtilApplet_Factory.server.in.in:

	Call the clock applet "Clock". Don't put it in a category...
	At least not a "Clocks" category, that's just asking for more
	crack-rock clocks to be written :-)

2002-01-16  Richard Hult  <rhult@codefactory.se>
