@@ -8,8 +8,8 @@
 		<item value="IDL:Bonobo/GenericFactory:1.0"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
-	<oaf_attribute name="name" type="string" value="GenUtil Applet Factory"/>
-	<oaf_attribute name="description" type="string" value="factory for creating some general applets"/>
+	<oaf_attribute name="name" type="string" _value="GenUtil Applet Factory"/>
+	<oaf_attribute name="description" type="string" _value="factory for creating some general applets"/>
 
 </oaf_server>
 
@@ -22,8 +22,8 @@
 		<item value="IDL:Bonobo/Control:1.0"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
-	<oaf_attribute name="name" type="string" value="Clock"/>
-	<oaf_attribute name="description" type="string" value="Clock Applet"/>
+	<oaf_attribute name="name" type="string" _value="Clock"/>
+	<oaf_attribute name="description" type="string" _value="Clock Applet"/>
 	<oaf_attribute name="panel:icon" type="string" value="gnome-clock.png"/>
 	<oaf_attribute name="panel:category" type="string" value="Utility"/>
 </oaf_server>
@@ -37,8 +37,8 @@
 		<item value="IDL:Bonobo/Control:1.0"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
-	<oaf_attribute name="name" type="string" value="Workspace Switcher"/>
-	<oaf_attribute name="description" type="string" value="Pager Applet"/>
+	<oaf_attribute name="name" type="string" _value="Workspace Switcher"/>
+	<oaf_attribute name="description" type="string" _value="Pager Applet"/>
 	<oaf_attribute name="panel:icon" type="string" value="gnome-workspace.png"/>
 	<oaf_attribute name="panel:category" type="string" value="Utility"/>
 
@@ -53,8 +53,8 @@
 		<item value="IDL:Bonobo/Control:1.0"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
-	<oaf_attribute name="name" type="string" value="Window Bar"/>
-	<oaf_attribute name="description" type="string" value="Tasklist Applet"/>
+	<oaf_attribute name="name" type="string" _value="Window Bar"/>
+	<oaf_attribute name="description" type="string" _value="Tasklist Applet"/>
 	<oaf_attribute name="panel:icon" type="string" value="gnome-windows.png"/>
 	<oaf_attribute name="panel:category" type="string" value="Utility"/>
 
@@ -69,8 +69,8 @@
 		<item value="IDL:Bonobo/Control:1.0"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
-	<oaf_attribute name="name" type="string" value="Inbox Monitor"/>
-	<oaf_attribute name="description" type="string" value="Mailcheck Applet"/>
+	<oaf_attribute name="name" type="string" _value="Inbox Monitor"/>
+	<oaf_attribute name="description" type="string" _value="Mailcheck Applet"/>
 	<oaf_attribute name="panel:icon" type="string" value="gnome-mailcheck.png"/>
 	<oaf_attribute name="panel:category" type="string" value="Network"/>
 
