@@ -1,3 +1,7 @@
+2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* GNOME_GenUtilApplet_Factory.server.in.in: Mark strings for l10n.
+	
 2002-02-11  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* tasklist.c: #include <config.h>
